fixing the button alignment

--- a/ckanext/geodatagov/fanstatic_library/styles/geodatagov.css
+++ b/ckanext/geodatagov/fanstatic_library/styles/geodatagov.css
@@ -1635,7 +1635,7 @@ font-weight:lighter;
 #dataset-search .results {
 margin-top:0px
 }
-.wrapper .btn-group.actions{top:-40px;}
+.wrapper .btn-group.actions{top:0px;}
 @media screen and (-webkit-min-device-pixel-ratio:0) {
 .page-header_new .toolbar .breadcrumb a{font-weight: lighter;}
     .btn-primary.question {
